
2020-04-28  Simon Sobisch <simonsobisch@gnu.org>

	* fileio.c (indexed_keydesc): always use key component definition
	  if available fixing broken 1-part "components" using wrong offset

2020-04-11  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (print_info) [mpir_version]: fixed string overflow warnings
	* numeric.c (cob_decimal_print): use of mpz_get_str in favor of gmp_sprintf

2020-04-01  Simon Sobisch <simonsobisch@gnu.org>

	* common.c: changed "FUNCTION/USING parameter" to "FUNCTION/USING argument"
	* screenio.c: moved screen initialization from internal to external
	  called function

2020-03-16  Simon Sobisch <simonsobisch@gnu.org>

	* common.c [WITH_CISAM] (print_info): fixed bug #621 missing comma

2020-03-11  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: adjusted invocation of help2man, using new defines
	  HELPSOURCES and HELP2MAN_OPTS
	* Makefile.am: honor new conditional MAKE_HAS_PREREQ_ONLY

2020-03-09  Simon Sobisch <simonsobisch@gnu.org>

	* common.c, intrinsic.c, numeric.c: FR #372 honor HAVE_GMP_H and HAVE_MPIR_H

2020-02-27  Simon Sobisch <simonsobisch@gnu.org>

	* common.h: definition of COB_A_NORETURN for newer HPUX (__HP_cc)

2019-10-15  Simon Sobisch <simonsobisch@gnu.org>

	* screenio.c (pass_cursor_to_program): fixed return column being off by -1
	* screenio.c (get_cursor_from_program): fixed alphanumeric CURSOR to only
	  work for size 6

2019-10-01  Edward Hart <edward.dan.hart@gmail.com>

	* fileio.c: fixed location of definition of off_t (bug #596)

2019-09-23  Simon Sobisch <simonsobisch@gnu.org>

	* common.h: moved alignment defines to cobc/cobc.h

2019-09-03  Ron Norman <rjn@inglenet.com>

	* call.c: Initialize valid_char when needed
	* numeric.c: Correct the definition of 'isinf'

2019-09-20  Ron Norman <rjn@inglenet.com>

	* reportio.c: Table up report for cleanup in cob_exit_reportio

2019-08-25  Simon Sobisch <simonsobisch@gnu.org>

	* fileio.c [WITH_DB]: minor refactoring - limit scope of some variables,